--- a/style.css
+++ b/style.css
@@ -41,9 +41,16 @@ button{
     border-radius: 40px;
     border: none;
     font-size: 18px;
+    font-weight: 500;
     color: white;
     background-color: var(--button-color);
     margin: 25px 0;
+    cursor: pointer;
+}
+
+button:hover{
+    background: linear-gradient(to bottom, var(--light-slate-blue),var(--royal-blue));
+
 }
 
 .card{
@@ -149,29 +156,44 @@ button{
     background-color: var(--Cobalt-blue-background);
 }
 
-@media screen and (max-width: 740px){
-    .section{
-        flex-direction: column;
+
+
+@media screen and (max-width: 700px) {
+    *{
+        margin: 0;
     }
-    
-    .card{
-        flex-direction: column;
-        padding: 10px;
-        width: 90%;
+    .card {
+      width: 100%;
+      flex-direction: column; 
+    }
+  
+    .left-card,
+    .right-card {
+      width: 100%; 
+      box-sizing: border-box; /* Ensure padding is included in the width calculation */
+      height: 50vh;
     }
 
     .left-card{
-        width: 100%;
+        border-radius: 0 0 50px 50px;
+        margin-bottom: 20px;
     }
-
-    .right-card{
-        width: 100%;
-        padding: 0 20px;
-        
+  
+  
+    .left-description {
+      margin: 25px auto; 
+      padding: 0 100px; 
     }
-
-    .block{
-        width: auto;
-        margin: 5px 0;
+  
+  
+    .block {
+      padding: 15px 10px; 
+      margin: 5px 0;
     }
-}
+  
+    .block-title img {
+      margin-right: 10px; 
+    }
+  }
+  
+  
